# madr_novels

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
madr_novels/: app.py  database.py  models.py  schemas.py  security.py  settings.py  utils.py
madr_novels/routes/: auth.py  livros.py  romancistas.py  usuarios.py
madr_novels/utils/: sanitizador.py
migrations/: env.py
migrations/versions/: 517670aeb7cd_add_usuarios_created_at_and_relationships.py  a1a1e358a60b_create_tables.py
tests/: conftest.py  fabricas.py  factories.py  test_app.py  test_auth.py  test_database.py  test_db.py  test_livros.py  test_paginacoes.py  test_romancistas.py  test_security.py  test_usuarios.py
