[tool.poetry]
name = "madr"
version = "0.1.0"
description = ""
authors = ["amanmdest <amanmdest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.0"}
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
ignr = "^2.2"
gh = "^0.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.7"
taskipy = "^1.13.0"
httpx = "^0.27.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev madr_novels/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=madr_novels -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
